[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "event-trace-memory"
version = "0.1.0"
description = "Reference implementation for content-addressed event trace memory."
requires-python = ">=3.8"

[project.scripts]
event-trace-memory = "event_trace_memory.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
